syntax = "proto3";

package rivet.backend.pkg.game.validate;

import "resources/legacy/proto/common.proto";

message Request {
	string name_id = 1;
	string display_name = 2;
}

message Response {
	repeated rivet.common.ValidationError errors = 1;
}
